# tradutor-de-binario

./: Pipfile  README.md  pyproject.toml  setup.py  tradutor.py
